Template na perfilADM

--- a/src/main/webapp/resources/css/templateADM.css
+++ b/src/main/webapp/resources/css/templateADM.css
@@ -24,7 +24,7 @@ body {font-family: "Lato", sans-serif;}
   padding: 6px 8px 6px 16px;
   text-decoration: none !important;
   font-size: 130%;
-  color: #818181;
+  color: white;
   display: block;
 }
 #imgb{
