Perfim ADEMIR pronta!

--- a/src/main/webapp/resources/css/perfilADM.css
+++ b/src/main/webapp/resources/css/perfilADM.css
@@ -1,6 +1,6 @@
-panel {
-	margin-left: 280px;
-	margin-top: 6%;
-	margin-right: 65%;
+.esse {
+	margin-left: 10%;
+	margin-top: 7%;
+	margin-right: 150px;
 	align: center;
 }
