--- a/src/main/webapp/resources/css/cssEmp.css
+++ b/src/main/webapp/resources/css/cssEmp.css
@@ -17,5 +17,13 @@
 
 .cl{
 	margin-top: 5%;
-	margin-left: 5%;
+	margin-left: 50%;
 	}
+	
+.img2{
+	margin-top: 100%;
+	margin-left: 100%
+	
+}
+	
+
