--- a/src/main/webapp/resources/css/cssEmp.css
+++ b/src/main/webapp/resources/css/cssEmp.css
@@ -8,22 +8,27 @@
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
-	
 }
 
 .img {
 	margin-left: 44%;
 }
 
-.cl{
+.cl {
 	margin-top: 5%;
 	margin-left: 50%;
-	}
-	
-.img2{
+}
+
+.img2 {
 	margin-top: 100%;
 	margin-left: 100%
-	
 }
-	
 
+.footer {
+	margin-top: 1% !important;
+	margin-bottom: 0% !important;
+}
+
+.ui-progressbar .ui-widget-header {
+    background: #DF0101;
+}
