--- a/src/main/webapp/resources/css/templateADM.css
+++ b/src/main/webapp/resources/css/templateADM.css
@@ -1,5 +1,6 @@
-body {
+html, body {
 	font-family: "Lato", sans-serif;
+	height: calc(100%);
 }
 
 .header nav {
@@ -7,8 +8,9 @@ body {
 }
 
 .content {
-	margin-left: 190px;
-	width: 90%;
+	padding-left: 190px;
+	width: 100%;
+	height:100%;
 	margin-right: 5%;
 	align: center;
 }
