--- a/src/main/webapp/resources/css/homeADM.css
+++ b/src/main/webapp/resources/css/homeADM.css
@@ -1,3 +1,10 @@
 a.home {
 	background-color: #b30000;
 }
+.content {
+	padding-left: 190px;
+	width: 100%;
+	height:100%;
+	margin-right: 5%;
+	align: center;
+}
